# nand2tetris

./: README.md  pyproject.toml
projects/1/: DMux.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Not16.hdl  Or8Way.hdl  Xor.hdl
projects/2/: ALU.hdl  FullAdder.hdl  HalfAdder.hdl
projects/3/: Bit.hdl  PC.hdl  RAM16K.hdl  RAM4K.hdl  RAM512.hdl  RAM64.hdl  RAM8.hdl
projects/4/fill/: Fill.asm  Fill.hack
projects/4/mult/: Mult.asm  Mult.hack
projects/5/: CPU.hdl  Computer.hdl  Memory.hdl
projects/6/assembler/: requirements.md
projects/6/assembler/src/: Parser.py  parser.py
projects/6/assembler/src/app/: Assembler.py  Code.py  Parser.py  SymbolTable.py  main.py
